# Simple-Review

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: developer-guide.md  installation.md  packaging.md  templates.md  user-guide.md
packaging/: review-studio.spec
scripts/: package.py
src/review_studio/: __init__.py  __main__.py
src/review_studio/app/: __init__.py  application.py  config.py  logging_config.py
src/review_studio/domain/: __init__.py  errors.py  interfaces.py  models.py  template_schema.py  value_objects.py
src/review_studio/exporters/: __init__.py  export_service.py
src/review_studio/gui/: __init__.py  application.py  exif_cleaner_dialog.py  main_window.py  settings_dialog.py  template_manager_dialog.py  theme.py
src/review_studio/gui/view_models/: __init__.py  main_view_model.py
src/review_studio/gui/widgets/: __init__.py  rating_widget.py
src/review_studio/plugins/: __init__.py
src/review_studio/preview/: __init__.py  renderer.py
src/review_studio/services/: __init__.py  image_metadata_service.py  review_service.py  template_service.py
src/review_studio/storage/: __init__.py  json_store.py  repository.py  settings.py
src/review_studio/templates/: __init__.py  engine.py
src/review_studio/templates/builtin/: __init__.py  default_bbcode.j2  default_review.json  default_trip_report.json
src/review_studio/utils/: paths.py
tests/: __init__.py
tests/unit/: __init__.py  test_domain.py  test_gui_smoke.py  test_image_metadata_service.py  test_render_storage_export.py  test_skeleton.py  test_template_profiles.py  test_view_model.py
